fixed spacing

--- a/frontend/src/components/About/About.css
+++ b/frontend/src/components/About/About.css
@@ -68,6 +68,7 @@
     width: 90%;
     margin: 20px auto;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
+    gap:45px
 }
 
 .blurb-title{
